2009-04-28  Jeffrey Stedfast  <fejj@novell.com>

	* build/vs2008/config-win32.h.in: No longer has GMIME_*_VERSION
	defines - these are all in gmime-version.h now.

	* gmime/gmime-version.h.in: New template for generating
	gmime-version.h

	* configure.ac: Renamed from configure.in. Now generates a
	gmime/gmime-version.h header which contains a macro for checking
	the GMime version at compile-time. Requested feature from the
	Balsa guys.

2009-04-26  Jeffrey Stedfast  <fejj@novell.com>

	* tests/test-streams.c: Updated to test GIO streams.

	* gmime/gmime-stream-gio.c: New GMimeStream wrapper around GIO
	streams.

2009-04-26  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-session*.[c,h]: Removed.

	* gmime/gmime-stream-pipe.[c,h]: New stream for pipes (where
	seeking isn't allowed). Needed by GMimeGpgContext.

	* gmime/gmime-gpg-context.c: Updated to use the new request_passwd
	callback function instead of the GMimeSession.
	(g_mime_gpg_context_set_auto_key_retrieve): New function for
	disabling the auto-key-retrieve functionality of gpg.
	(g_mime_gpg_context_get_auto_key_retrieve): New function to get
	the state of auto-key-retrieve enabledness.

	* gmime/gmime-cipher-context.[c,h]: No longer references a
	GMimeSession. Instead, we now have a GMimePasswordRequestFunc used
	for prompting the user.

2009-04-26  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-multipart-encrypted.c: Removed stub virtual method
	overloads that did nothing but call the base class'
	implementation.

	* gmime/gmime-multipart-signed.c: Same.

	* gmime/gmime-message-part.c (message_part_prepend_header):
	Protect against setting Content-MD5 header since this is not
	allowed.
	(message_part_append_header): Same.
	(message_part_get_header): Don't bother checking that the
	requested header begins with "Content-", just pass it along to our
	base class implementation to worry about.
	(message_part_remove_header): Same.

	* gmime/gmime-message-partial.c (message_partial_get_header):
	Same.