@@ -28,11 +28,18 @@ GMime 2.6 Planning:
 
 - Add GIO-based GMimeStream and bump glib dep to 2.16 [ DONE ]
 
-- Add a g_mime_part_set_best_encoding()?
+- Add a g_mime_part_get_best_content_encoding()? [ DONE ]
 
-- How about a g_mime_part_set_best_charset()? This one could be
+- Rename GMimeBestEncoding enum to GMimeEncodingConstraint? This might
+  be a better name for the enum to reflect what it's actually meant
+  for. Maybe also move it to gmime-encodings.h?
+
+- How about a g_mime_part_get_best_charset()? This one could be
   awkward since it depends on the input text being UTF-8...
 
+- Should either rename g_mime_filter_best_encoding() to get_encoding()
+  or else make sure that GMime.metadata 'fixes' the method name to be
+  GetEncoding so that it will appear as a C# property getter.
 
 
 Other:
