@@ -722,6 +722,7 @@ g_mime_part_set_content_location
 g_mime_part_get_content_location
 g_mime_part_set_content_encoding
 g_mime_part_get_content_encoding
+g_mime_part_get_best_content_encoding
 g_mime_part_set_filename
 g_mime_part_get_filename
 g_mime_part_get_content_object
