@@ -60,9 +60,9 @@ typedef enum {
  * @GMIME_BEST_ENCODING_8BIT: The stream data may have bytes with the high bit set, but no null bytes.
  * @GMIME_BEST_ENCODING_BINARY: The stream may contain any binary data.
  *
- * Used with g_mime_filter_best_encoding() as the 'required'
+ * Used with g_mime_filter_best_encoding() as the 'constraint'
  * argument. These values provide a means of letting the filter know
- * what the encoding requirements are for the stream.
+ * what the encoding constraints are for the stream.
  **/
 typedef enum {
 	GMIME_BEST_ENCODING_7BIT,
@@ -126,7 +126,7 @@ GMimeFilter *g_mime_filter_best_new (GMimeFilterBestFlags flags);
 
 const char *g_mime_filter_best_charset (GMimeFilterBest *best);
 
-GMimeContentEncoding g_mime_filter_best_encoding (GMimeFilterBest *best, GMimeBestEncoding required);
+GMimeContentEncoding g_mime_filter_best_encoding (GMimeFilterBest *best, GMimeBestEncoding constraint);
 
 G_END_DECLS
 
