@@ -1,10 +1,18 @@
 2009-04-28  Jeffrey Stedfast  <fejj@novell.com>
 
+	* gmime/gmime-part.c (g_mime_part_get_best_content_encoding): New
+	helper function to calculate the most efficient
+	Content-Transfer-Encoding for a given mime-part.
+
+2009-04-28  Jeffrey Stedfast  <fejj@novell.com>
+
 	* build/vs2008/config-win32.h.in: No longer has GMIME_*_VERSION
 	defines - these are all in gmime-version.h now.
 
 	* gmime/gmime-version.h.in: New template for generating
 	gmime-version.h
+
+	* gmime/gmime.h: #include gmime-version.h
 
 	* configure.ac: Renamed from configure.in. Now generates a
 	gmime/gmime-version.h header which contains a macro for checking
